add get replis comment
