# app/controllers/api/users_controller.rb
@@ -1,7 +1,6 @@
 class Api::UsersController < Api::BaseController
   before_action :set_controllers
-  before_action :set_user
-  
+
   # GET /users/1
   # GET /users/1.json
   def show
@@ -13,26 +12,18 @@ class Api::UsersController < Api::BaseController
   # PATCH/PUT /users/1.json
   def update
     if @usersController.isValidApiToken(getApiKey)
-      user = @userController.getUserByApiToken(getApiKey())
+      user = @usersController.getUserByApiToken(getApiKey)
       userparam = User.new(user_params_edit)
-      
-      ##validar por contrasenya
-      if user.password == userparam.password
         if user.update(user_params_edit)
            render json: user , status: :ok
         else
            render json: @user.errors, status: :unprocessable_entity 
         end
-      else
-          render json: {error: 'wrong password'}, status: :unauthorized
-      end
     else
-         render json: {error: 'invalid apiKey or undefined'}, status: :unauthorized
+         render json: {error: 'wrong apiKey'}, status: :unauthorized
     end
   end
-  
-  
-  
+
   def result(element)
     if element.nil?
       render json: {error: 'No content'}, status: :no_content
@@ -61,9 +52,5 @@ class Api::UsersController < Api::BaseController
     def set_controllers
       @usersController = UsersController.new
     end
-    
-    def set_user
-      @user = User.find(params[:id])
-    end
-  
+
 end
